<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

            <data>
                <variable
                    name="Keysview"
                    type="vn.edu.uel.apptudien.viewmodel.KeywordModel" />

                <variable
                    name="PresenterHome"
                    type="vn.edu.uel.apptudien.presenter.HomepagePresenter" />
                <variable
                    name="BannerView"
                    type="vn.edu.uel.apptudien.viewmodel.BannerModel" />
            </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <!--
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="660dp"
                                android:background="#03000000">
                                <LinearLayout
                                    android:layout_width="300dp"
                                    android:layout_height="match_parent"
                                    android:background="@color/colorPrimaryTrans"
                                    android:layout_alignParentLeft="true">


                                </LinearLayout>
                            </LinearLayout>
                -->




                <LinearLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_nav_button"
                            android:id="@+id/nav_button"
                            android:onClick="@{()->PresenterHome.openDrawer()}"></Button>
                        <!--                        <LinearLayout-->
                        <!--                            android:id="@+id/nav_con_button"-->
                        <!--                            android:gravity="center"-->
                        <!--                            android:layout_width="40dp"-->
                        <!--                            android:layout_height="40dp"-->
                        <!--                            android:backgroundTint="@android:color/transparent"-->
                        <!--                            android:background="@drawable/round_box_layout">-->

                        <!--                            <ImageButton-->
                        <!--                                android:id="@+id/nav_button"-->
                        <!--                                android:layout_width="wrap_content"-->
                        <!--                                android:layout_height="wrap_content"-->
                        <!--                                android:layout_gravity="center"-->
                        <!--                                android:background="@android:color/transparent"-->
                        <!--                                android:src="@drawable/ic_apps_black_24dp"-->
                        <!--                                android:tint="@color/colorPrimary" />-->
                        <!--                        </LinearLayout>-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true">
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_flag"
                                ></ImageView>

                            <Switch
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:width="50dp"
                                android:height="20dp"
                                android:checked="true"
                                android:thumb="@drawable/round_thumb"
                                android:track="@drawable/round_track"
                                android:id="@+id/home_lang_switch">

                            </Switch>
                        </LinearLayout>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="#eee"
                        android:gravity="center"
                        android:id="@+id/banner_wrapper"
                        >

                        <ImageView


                            android:id="@+id/banner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            tai="@{BannerView.view}"
                            dai="@{BannerView.dai}"
                            rong="@{BannerView.rong}">

                        </ImageView>

                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="80dp"
                            android:orientation="vertical"
                            >
                            <LinearLayout
                                android:layout_centerVertical="true"
                                android:layout_centerInParent="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"



                                >
                                <ImageView
                                    android:layout_width="180px"
                                    android:layout_height="200px"
                                    android:paddingLeft="5dp"
                                    android:paddingRight="5dp"
                                    android:src="@drawable/logo_uel"

                                    >

                                </ImageView>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"

                                        android:minWidth="200dp"

                                        android:text="@string/uniName"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="16dp">

                                    </TextView>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/divName"
                                        android:textColor="#666"

                                        android:minWidth="200dp">

                                    </TextView>
                                </LinearLayout>

                            </LinearLayout>

                        </RelativeLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:layout_gravity="center_horizontal"
                            android:textSize="24dp"
                            android:textColor="#666">

                        </TextView>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/colorPrimary"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            >

                            <include
                                android:id="@+id/bind_search_bar"
                                layout="@layout/search_bar">

                            </include>


                            <include layout="@layout/tag_layout"
                                android:visibility="gone">

                            </include>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:minHeight="25dp"
                                android:paddingTop="10dp"
                                android:paddingLeft="25dp"
                                android:paddingRight="25dp"
                                >
                                <include
                                    layout="@layout/spinner_layout"
                                    android:id="@+id/search_spinner"
                                    >


                                </include>
                            </LinearLayout>




                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/search_result_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/searchResult"
                            android:textColor="#000"
                            android:textSize="20dp"
                            android:textStyle="bold">

                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <TextView
                                android:id="@+id/search_input_keyword_translated_keyword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minWidth="100dp"
                                android:minHeight="25dp"
                                android:text="@{Keysview.vi_word + ` - ` +Keysview.en_word}"
                                android:textColor="#444"
                                android:textSize="16dp">

                            </TextView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/home_result_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{Keysview.newsFound}"
                            android:textColor="#888"
                            android:textSize="16dp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_cards_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="8dp"
                        android:orientation="vertical">
                        <ListView
                            android:id="@+id/home_cards"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:dividerHeight="5dp">

                        </ListView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="0dp"
                        android:background="@android:color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:padding="15dp"
                            android:text="@string/copyright">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

        <!-- <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             /> -->

    </LinearLayout>
</layout>
